Added SMP debugging changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,4 +119,6 @@ add_dependencies(sel4runtime sel4runtime_crt)
 
 # A C library is still needed here to provide memcpy, stdint.h, and
 # elf.h
-target_link_libraries(sel4runtime PUBLIC sel4 sel4_autoconf PRIVATE sel4runtime_Config)
+# target_link_libraries(sel4runtime PUBLIC sel4 sel4_autoconf PRIVATE sel4runtime_Config)
+# NIRCHG
+target_link_libraries(sel4runtime PUBLIC sel4 sel4_autoconf utils PRIVATE sel4runtime_Config)
